--- a/.github/workflows/build_openwrt.yml
+++ b/.github/workflows/build_openwrt.yml
@@ -72,7 +72,7 @@ jobs:
         docker-images: false
         swap-storage: false
         
-    - name: 检查准备 #Checkout
+    - name: 检查准备1 #Checkout
       uses: actions/checkout@main
       with:
         fetch-depth: 0
@@ -91,6 +91,18 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
+        
+    - name: Combine Disks
+      uses: easimon/maximize-build-space@master
+      with:
+        swap-size-mb: 1024
+        temp-reserve-mb: 100
+        root-reserve-mb: 1024
+        
+    - name: 检查准备2 #Checkout
+      uses: actions/checkout@main
+      with:
+        fetch-depth: 0
         
     - name: Clone source code
       working-directory: /workdir
