--- a/.github/workflows/build_openwrt.yml
+++ b/.github/workflows/build_openwrt.yml
@@ -39,7 +39,7 @@ env:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-lastest
 
     steps:
     - name: Check Server Performance
@@ -72,7 +72,7 @@ jobs:
         docker-images: false
         swap-storage: false
         
-    - name: 检查准备1 #Checkout
+    - name: 检查准备_1 #Checkout
       uses: actions/checkout@main
       with:
         fetch-depth: 0
@@ -99,7 +99,7 @@ jobs:
         temp-reserve-mb: 100
         root-reserve-mb: 1024
         
-    - name: 检查准备2 #Checkout
+    - name: 检查准备_2 #Checkout
       uses: actions/checkout@main
       with:
         fetch-depth: 0
