--- a/.github/workflows/build_openwrt.yml
+++ b/.github/workflows/build_openwrt.yml
@@ -39,7 +39,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-22.04
 
     steps:
     - name: Check Server Performance
